# tradix

./: .gitignore  README.md  README_KR.md  __init__.py  cli.py  engine.py  multiAssetEngine.py  pyproject.toml  version.py
.github/workflows/: publish.yml  test.yml
advisor/: README.md  __init__.py  learnedPatterns.py  marketClassifier.py  regimeForecaster.py  strategyAdvisor.py
analytics/: __init__.py  blackSwan.py  charts.py  correlation.py  drawdownSimulator.py  fractalAnalysis.py  generator.py  informationTheory.py  leaderboard.py  metrics.py  monteCarloStress.py  portfolioStress.py  regimeDetector.py  reportCharts.py  seasonality.py  strategyDna.py  strategyHealth.py  tearsheet.py  tradingJournal.py  whatIf.py
benchmark/: __init__.py  comparator.py  runBenchmark.py
broker/: __init__.py  advancedOrders.py  commission.py  executionSimulator.py  fill.py  simulator.py  slippage.py
datafeed/: __init__.py  cache.py  ccxt.py  fdr.py  feed.py  multiDataFeed.py  yahoo.py
docs/: API.md  EXAMPLES.md
easy/: README.md  __init__.py  api.py  conditions.py  examples.py  korean.py  presets.py  quick.py
entities/: __init__.py  bar.py  order.py  position.py  trade.py
events/: __init__.py  base.py  fill.py  market.py  order.py  signal.py
examples/: __init__.py  bollingerStrategy.py  breakoutStrategy.py  dualMomentumStrategy.py  macdStrategy.py  meanReversionStrategy.py  rsiStrategy.py  smaCross.py  smaCrossWithRisk.py  trendFilterStrategy.py
optimize/: __init__.py  optimizer.py  space.py
portfolio/: __init__.py  optimizer.py  portfolio.py
quant/: __init__.py  factor.py  integration.py  statarb.py
risk/: __init__.py  manager.py  simulator.py  sizing.py
signals/: __init__.py  adaptive.py  analyzer.py  backtest.py  forecast.py  predictor.py
signals/experiments/: EXPERIMENTS.md  e001_single_indicator_accuracy.py  e002_consensus_strategy.py  e003_forecast_integration.py  e004_market_regime.py  e005_strength_correlation.py  e006_real_stock_backtest.py  e007_extended_stock_test.py  e008_adaptive_strategy.py
strategy/: __init__.py  base.py  combiner.py  indicators.py
tests/: __init__.py  testAnalytics.py  testCore.py  testEasyApi.py  testVectorized.py
tui/: DASHBOARD_SPEC.md  __init__.py  charts.py  console.py  dashboard.py  progress.py
vectorized/: __init__.py  engine.py  indicators.py  signals.py
walkforward/: __init__.py  analyzer.py  splitter.py
