[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradex-backtest"
version = "1.0.0"
description = "Blazing-fast vectorized backtesting engine for quantitative trading. 50+ indicators, Korean market native."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Chani"}
]
keywords = [
    "backtesting",
    "trading",
    "finance",
    "quant",
    "algorithmic-trading",
    "vectorized",
    "technical-analysis",
    "korean-stock",
    "numpy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "finance-datareader>=0.9.50",
]

[project.optional-dependencies]
full = [
    "scipy>=1.7.0",
    "plotly>=5.0.0",
    "statsmodels>=0.13.0",
    "scikit-learn>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/chani/tradex"
Repository = "https://github.com/chani/tradex"
Issues = "https://github.com/chani/tradex/issues"

[tool.setuptools]
packages = [
    "tradex",
    "tradex.advisor",
    "tradex.analytics",
    "tradex.benchmark",
    "tradex.broker",
    "tradex.datafeed",
    "tradex.easy",
    "tradex.entities",
    "tradex.events",
    "tradex.examples",
    "tradex.optimize",
    "tradex.portfolio",
    "tradex.quant",
    "tradex.risk",
    "tradex.signals",
    "tradex.strategy",
    "tradex.vectorized",
    "tradex.walkforward",
]
package-dir = {"tradex" = "."}

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test*.py"]
addopts = "-v"
