[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradix"
version = "1.1.0"
description = "Blazing-fast vectorized backtesting engine for quantitative trading. 60+ indicators, 33 strategies, multi-source data (FDR/Yahoo/CCXT), advanced orders (OCO/Bracket/Trailing), Korean market native."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "eddmpython"}
]
keywords = [
    "backtesting",
    "trading",
    "finance",
    "quant",
    "algorithmic-trading",
    "vectorized",
    "technical-analysis",
    "korean-stock",
    "numpy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "finance-datareader>=0.9.50",
    "rich>=13.0",
    "plotext>=5.3",
    "typer>=0.12",
]

[project.optional-dependencies]
full = [
    "scipy>=1.7.0",
    "plotly>=5.0.0",
    "statsmodels>=0.13.0",
    "scikit-learn>=1.0.0",
]
yahoo = [
    "yfinance>=0.2.0",
]
crypto = [
    "ccxt>=4.0.0",
]
tui = [
    "textual>=0.80",
    "textual-plotext>=1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
tradix = "tradix.cli:app"

[project.urls]
Homepage = "https://github.com/eddmpython/tradix"
Repository = "https://github.com/eddmpython/tradix"
Issues = "https://github.com/eddmpython/tradix/issues"
"Buy Me a Coffee" = "https://buymeacoffee.com/eddmpython"

[tool.setuptools]
packages = [
    "tradix",
    "tradix.advisor",
    "tradix.analytics",
    "tradix.benchmark",
    "tradix.broker",
    "tradix.datafeed",
    "tradix.easy",
    "tradix.entities",
    "tradix.events",
    "tradix.examples",
    "tradix.optimize",
    "tradix.portfolio",
    "tradix.quant",
    "tradix.risk",
    "tradix.signals",
    "tradix.strategy",
    "tradix.vectorized",
    "tradix.walkforward",
    "tradix.tui",
]
package-dir = {"tradix" = "."}

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test*.py"]
addopts = "-v"
